tests/baselines/reference/accessorParameterAccessibilityModifier.errors.txt
tests/cases/compiler/accessorParameterAccessibilityModifier.ts(2,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/accessorParameterAccessibilityModifier.ts(2,11): error TS2369: A parameter property is only allowed in a constructor implementation.
tests/cases/compiler/accessorParameterAccessibilityModifier.ts(3,16): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/accessorParameterAccessibilityModifier.ts(3,18): error TS2369: A parameter property is only allowed in a constructor implementation.


==== tests/cases/compiler/accessorParameterAccessibilityModifier.ts (4 errors) ====
    class C {
        set X(public v) { }
            ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
              ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        static set X(public v2) { }
                   ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                     ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }